[package]
name = "huginn"
edition = "2021"
version = "1.0.0"
authors = ["xvi.xv.xii.ix.xxii.ix.xiv <xvi.xv.xii.ix.xxii.ix.xiv@gmail.com>"]
description = "Secure input validation and sanitization library with extensible architecture"
license = "MIT"
repository = "https://github.com/xvi-xv-xii-ix-xxii-ix-xiv/huginn"
homepage = "https://github.com/xvi-xv-xii-ix-xxii-ix-xiv/huginn"
documentation = "https://docs.rs/huginn/0.9.0-rc.1/huginn/"
readme = "README.md"
keywords = ["security", "validation", "sanitization", "input"]
categories = ["parsing"]

[lib]
name = "huginn"
path = "src/lib.rs"

[dependencies]
regex = "1.11"
lazy_static = "1.5"
thiserror = "1.0"
urlencoding = "2.1"
rayon = "1.10"
teloxide = "0.15"
async-trait = "0.1.86"
tokio = { version = "1.44.2", features = ["full"] }

[dev-dependencies]
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"

[[example]]
name = "telegram_bot_example"
path = "examples/telegram_bot_example.rs"